# TelegramWalletPay

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  codecov.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: linters.yml  publish.yml  tests.yml
examples/: 00_create_order.py  00_get_started.py  01_get_order_preview.py  02_bot_example.py  02_telegram_bot.py  03_webhook_handler_example.py  03_webhook_handler_fastapi.py  04_webhook_handler_aiohttp.py  05_telegram_bot_webhook.py
telegram_wallet_pay/: __init__.py  client.py  constants.py  errors.py  tools.py
telegram_wallet_pay/enums/: __init__.py  button_name.py  currency.py  order_status.py  request_status.py  webhook_message_type.py
telegram_wallet_pay/schemas/: __init__.py  _default.py  create_order_request.py  create_order_response.py  get_order_preview_response.py  get_order_reconciliation_list_response.py  money_amount.py  order.py  order_amount.py  order_amount_response.py  order_amount_result.py  order_new.py  order_preview.py  order_reconciliation_item.py  order_reconciliation_list.py  order_reconciliation_result.py  order_result.py  payment_option.py  update.py  webhook_message.py  webhook_payload.py
telegram_wallet_pay/tools/: __init__.py  aiohttp.py  fastapi.py  ip_filter.py  signature.py  text.py
tests/: conftest.py  samples.py  test_client.py  test_schemas.py  test_signature.py
tests/test_tools/: test_aiohttp.py  test_fastapi.py  test_ip_filter.py  test_signature.py
