[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-wallet-pay"
dynamic = ["version"]
description = "Async client for Telegram Wallet Pay API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Oleg Abramov", email = "oleg@trueweb.app" },
]
maintainers = [
    { name = "Oleg Abramov", email = "oleg@trueweb.app" },
]
keywords = [
    "Telegram",
    "Wallet",
    "Pay",
    "API",
    "async",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.8.5,<3.10.0",
    "pydantic>=2.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0",
    "mypy>=1",
    "pre-commit>=3",
]
test = [
    "coverage>=7",
    "pytest>=7",
    "pytest-asyncio>=0",
    "pytest-cov>=4",
]



[project.urls]
Repository = "https://github.com/Olegt0rr/TelegramWalletPay"

[tool.hatch.version]
path = "telegram_wallet_pay/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]

[tool.hatch.envs.default]
features = [
    "dev",
    "test",
]
post-install-commands = [
    "pre-commit install",
]

[tool.hatch.envs.default.scripts]
lint = [
    "ruff check telegram_wallet_pay --fix",
]

[tool.hatch.envs.dev]
python = "3.9"
features = [
    "dev",
    "test",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "310", "311", "312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]


[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]


[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true


[tool.ruff]
src = ["app", "tools", "tests"]
select = ["ALL"]
ignore = ["A003", "ANN002", "ANN003", "ANN101", "ANN102", "D100", "D101", "D106", "D107", "D104", "D203", "D213", "RUF001", "RUF002", "RUF003", "S101", "TCH001", "TCH002", "PT015", "PT017", "B011"]
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9
target-version = "py39"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "telegram_wallet_pay.schemas._default.DefaultModel"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "INP001"]
"examples/*" = ["INP001", "T201"]
