[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-wallet-pay"
dynamic = ["version"]
description = "Async client for Telegram Wallet Pay API"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Oleg Abramov", email = "oleg@trueweb.app" },
]
maintainers = [
    { name = "Oleg Abramov", email = "oleg@trueweb.app" },
]
keywords = [
    "Telegram",
    "Wallet",
    "Pay",
    "API",
    "async",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.8,<4",
    "pydantic>=2.4,<3",
    "certifi>=2023",
]

[project.optional-dependencies]
dev = [
    "ruff>=0,<1",
    "mypy>=1,<2",
    "pre-commit>=3,<4",
    "fastapi>=0.110,<1",
    "orjson<3.10.3",
    "uvicorn>=0.29,<1",
    "httpx>=0.27,<1",
]
test = [
    "coverage>=7,<8",
    "pytest>=8,<9",
    "pytest-asyncio>=0,<1",
    "pytest-cov>=5,<6",
    "aresponses>=3,<4",
    "fastapi>=0.110,<1",
    "httpx>=0.27,<1",
]


[project.urls]
Repository = "https://github.com/Olegt0rr/TelegramWalletPay"
Documentation = "https://docs.wallet.tg/pay/"

[tool.hatch.version]
path = "telegram_wallet_pay/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
]

[tool.hatch.envs.default]
features = [
    "dev",
    "test",
]
post-install-commands = [
    "pre-commit install",
]

[tool.hatch.envs.default.scripts]
lint = [
    "ruff check telegram_wallet_pay --fix",
]

[tool.hatch.envs.dev]
python = "3.8"
features = [
    "dev",
    "test",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "310", "311", "312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]


[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "examples.*"
ignore_errors = true


[tool.ruff]
src = ["app", "tools", "tests"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Assume minimal Python version
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["A003", "ANN002", "ANN003", "ANN101", "ANN102", "D100", "D101", "D106", "D107", "D104", "D203", "D213", "DTZ005", "FA100", "RUF001", "RUF002", "RUF003", "S101", "TCH001", "TCH002", "PT015", "PT017", "B011"]
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "telegram_wallet_pay.schemas._default.DefaultModel"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "INP001", "D"]
"examples/*" = ["INP001", "T201"]
